--- a/index.html
+++ b/index.html
@@ -34,54 +34,50 @@
               <a class="nav-list-link" href="#">Контакти</a>
             </li>
           </ul>
-          <ul class="list">
-            <li class="list-item">
-              <a class="list-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="list-item">
-              <a class="list-link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
         </nav>
+        <div class="contact-list">
+            <a class="contact-list-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+            <a class="contact-list-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+        </div>
       </div>
     </header>
     <main class="main">
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
-      <section class="main-section">
+      <section class="features">
         <div class="container">
-          <ul class="main-section-list">
-            <li class="main-section-list-item">
-              <h3 class="main-section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="main-section-text">
+          <ul class="features-list">
+            <li class="features-list-item">
+              <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="main-section-list-item">
-              <h3 class="main-section-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="main-section-text">
+            <li class="features-list-item">
+              <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="main-section-list-item">
-              <h3 class="main-section-title">ПЛАНУВАННЯ</h3>
-              <p class="main-section-text">
+            <li class="features-list-item">
+              <h3 class="features-title">ПЛАНУВАННЯ</h3>
+              <p class="features-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="main-section-list-item">
-              <h3 class="main-section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="main-section-text">
+            <li class="features-list-item">
+              <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="features-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -89,19 +85,19 @@
           </ul>
         </div>
       </section>
-      <section class="features">
+      <section class="work">
         <div class="container">
-          <h2 class="features-title">Чим ми займаємося</h2>
-          <ul class="features-list">
-            <li class="features-list-item">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="work-list">
+            <li class="work-list-item">
               <img
-                class="features-img"
+                class="work-img"
                 src="./images/coding.jpg"
                 alt="coding"
                 width="370"
               />
             </li>
-            <li class="features-list-item">
+            <li class="work-list-item">
               <img
                 class="features-img"
                 src="./images/working.jpg"
@@ -111,7 +107,7 @@
             </li>
             <li class="features-list-item">
               <img
-                class="features-img"
+                class="work-img"
                 src="./images/designing.jpg"
                 alt="designing"
                 width="370"
@@ -178,14 +174,16 @@
     </main>
     <footer class="footer">
       <div class="container">
-      <a class="footer-logo" href="#"
-        >Web<span class="footer-span">Studio</span></a
-      >
-      <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-      <a class="footer-mail" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="footer-logo" href="#"
+          >Web<span class="footer-span">Studio</span></a
+        >
+        <address class="address">
+        <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+        <a class="footer-mail" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+      </address>
       </div>
     </footer>
   </body>
