--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body>
     <header class="header">
       <div class="container">
-        <a class="header-logo" href="#"
+        <a class="header-logo" href="./index.html"
           >Web<span class="header-span">Studio</span></a
         >
         <nav class="navigation">
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-list-link" href="#">Студія</a>
+              <a class="nav-list-link" href="./index.html">Студія</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
@@ -36,19 +36,22 @@
           </ul>
         </nav>
         <div class="contact-list">
-            <a class="contact-list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-            <a class="contact-list-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+          <a class="contact-list-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="contact-list-link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </div>
       </div>
     </header>
     <main class="main">
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+          <h1 class="hero-title">
+            Ефективні рішення для <br />
+            вашого бізнесу
+          </h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
       </section>
@@ -178,12 +181,12 @@
           >Web<span class="footer-span">Studio</span></a
         >
         <address class="address">
-        <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-        <a class="footer-mail" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+          <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+          <a class="footer-mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
       </div>
     </footer>
   </body>
