--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,10 @@
         <nav class="navigation">
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-list-link" href="#">Студія</a>
+              <a class="nav-list-link" href="./index.html">Студія</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-list-link" href="#">Портфоліо</a>
+              <a class="nav-list-link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-list-link" href="#">Контакти</a>
@@ -70,7 +70,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/ПостерNewOrlea.jpg"
+              src="./images/NewOrlea.jpg"
               alt="NewOrlean"
             />
             <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
@@ -86,7 +86,7 @@
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/ПроєктPrime.jpg" alt="Prime" />
+            <img class="info-img" src="./images/Prime.jpg" alt="Prime" />
             <h4 class="info-title">Проєкт Prime</h4>
             <p class="info-text">Маркетинг</p>
           </article>
@@ -113,7 +113,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/ВиданняLimited.jpg"
+              src="./images/Limited.jpg"
               alt="Limited"
             />
             <h4 class="info-title">Видання Limited Edition</h4>
@@ -122,7 +122,7 @@
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/ПроєктLab.jpg" alt="Lab" />
+            <img class="info-img" src="./images/Lab.jpg" alt="Lab" />
             <h4 class="info-title">Проєкт LAB</h4>
             <p class="info-text">Маркетинг</p>
           </article>
