--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li class="work-list-item">
               <img
                 class="work-img"
-                src="./images/coding.jpg"
+                src="./images/work/coding.jpg"
                 alt="coding"
                 width="370"
               />
@@ -103,7 +103,7 @@
             <li class="work-list-item">
               <img
                 class="features-img"
-                src="./images/working.jpg"
+                src="./images/work/working.jpg"
                 alt="working"
                 width="370"
               />
@@ -111,7 +111,7 @@
             <li class="work-list-item">
               <img
                 class="work-img"
-                src="./images/designing.jpg"
+                src="./images/work/designing.jpg"
                 alt="designing"
                 width="370"
               />
@@ -127,7 +127,7 @@
               <article class="team-info">
                 <img
                   class="team-img"
-                  src="./images/Ігор.jpg"
+                  src="./images/team/Ігор.jpg"
                   alt="Ігор"
                   width="270"
                 />
@@ -139,7 +139,7 @@
               <article class="team-info">
                 <img
                   class="team-img"
-                  src="./images/Ольга.jpg"
+                  src="./images/team/Ольга.jpg"
                   alt="Ольга"
                   width="270"
                 />
@@ -151,7 +151,7 @@
               <article class="team-info">
                 <img
                   class="team-img"
-                  src="./images/Микола.jpg"
+                  src="./images/team/Микола.jpg"
                   alt="Микола"
                   width="270"
                 />
@@ -163,7 +163,7 @@
               <article class="team-info">
                 <img
                   class="team-img"
-                  src="./images/Михайло.jpg"
+                  src="./images/team/Михайло.jpg"
                   alt="Михайло"
                   width="270"
                 />
