--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/Технокряк.jpg"
+              src="./images/portfolio/Технокряк.jpg"
               alt="Технокряк"
             />
             <h4 class="info-title">Технокряк</h4>
@@ -70,7 +70,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/NewOrlea.jpg"
+              src="./images/portfolio/NewOrlea.jpg"
               alt="NewOrlean"
             />
             <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
@@ -79,21 +79,21 @@
         </li>
         <li>
           <article class="info">
-            <img class="info-img" src="./images/Seafood.jpg" alt="Seafood" />
+            <img class="info-img" src="./images/portfolio/Seafood.jpg" alt="Seafood" />
             <h4 class="info-title">Ресторан Seafood</h4>
             <p class="info-text">Додаток</p>
           </article>
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/Prime.jpg" alt="Prime" />
+            <img class="info-img" src="./images/portfolio/Prime.jpg" alt="Prime" />
             <h4 class="info-title">Проєкт Prime</h4>
             <p class="info-text">Маркетинг</p>
           </article>
         </li>
         <li>
           <article class="info">
-            <img class="info-img" src="./images/Boxes.jpg" alt="Boxes" />
+            <img class="info-img" src="./images/portfolio/Boxes.jpg" alt="Boxes" />
             <h4 class="info-title">Проєкт Boxes</h4>
             <p class="info-text">Додаток</p>
           </article>
@@ -102,7 +102,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/Inspiration.jpg"
+              src="./images/portfolio/Inspiration.jpg"
               alt="Inspiration"
             />
             <h4 class="info-title">Inspiration has no Borders</h4>
@@ -113,7 +113,7 @@
           <article class="info">
             <img
               class="info-img"
-              src="./images/Limited.jpg"
+              src="./images/portfolio/Limited.jpg"
               alt="Limited"
             />
             <h4 class="info-title">Видання Limited Edition</h4>
@@ -122,14 +122,14 @@
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/Lab.jpg" alt="Lab" />
+            <img class="info-img" src="./images/portfolio/Lab.jpg" alt="Lab" />
             <h4 class="info-title">Проєкт LAB</h4>
             <p class="info-text">Маркетинг</p>
           </article>
         </li>
         <li class="main-list-item">
           <article class="info">
-            <img class="info-img" src="./images/Growing.jpg" alt="Growing" />
+            <img class="info-img" src="./images/portfolio/Growing.jpg" alt="Growing" />
             <h4 class="info-title">Growing Business</h4>
             <p class="info-text">Додаток</p>
           </article>
