--- a/index.html
+++ b/index.html
@@ -36,12 +36,22 @@
           </ul>
         </nav>
         <div class="contact-list">
-          <a class="contact-list-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="contact-list-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
+          <div class="contact-email">
+            <svg class="contacts-email__icon" width="16px" height="12px">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            <a class="contact-list-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </div>
+          <div class="contact-tel">
+            <svg class="contacts-tel__icon" width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+            <a class="contact-list-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </div>
         </div>
       </div>
     </header>
@@ -133,6 +143,28 @@
                 />
                 <h3 class="team-name">Ігор Дем'яненко</h3>
                 <p class="team-prof">Product Designer</p>
+                <ul class="team-social">
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </article>
             </li>
             <li class="team-list-item">
@@ -145,6 +177,28 @@
                 />
                 <h3 class="team-name">Ольга Рєпіна</h3>
                 <p class="team-prof">Frontend Developer</p>
+                <ul class="team-social">
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </article>
             </li>
             <li class="team-list-item">
@@ -157,6 +211,28 @@
                 />
                 <h3 class="team-name">Микола Тарасов</h3>
                 <p class="team-prof">Marketing</p>
+                <ul class="team-social">
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </article>
             </li>
             <li class="team-list-item">
@@ -169,7 +245,66 @@
                 />
                 <h3 class="team-name">Михайло Єрмаков</h3>
                 <p class="team-prof">UI Designer</p>
+                <ul class="team-social">
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="team-social__item">
+                    <svg class="team-social__icon">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="brands">
+        <div class="container">
+          <h2 class="brands__title">Постійні клієнти</h2>
+          <ul class="brands__list">
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-yaco"></use>
+              </svg>
+            </li>
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-taghere"></use>
+              </svg>
+            </li>
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-company"></use>
+              </svg>
+            </li>
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-foster"></use>
+              </svg>
+            </li>
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-brand"></use>
+              </svg>
+            </li>
+            <li class="brands-list__item">
+              <svg class="brands__icon">
+                <use href="./images/symbol-defs.svg#icon-tagline"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -177,6 +312,7 @@
     </main>
     <footer class="footer">
       <div class="container">
+        <div class="footer-pages__left">
         <a class="footer-logo" href="#"
           >Web<span class="footer-span">Studio</span></a
         >
@@ -187,6 +323,32 @@
           >
           <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+      </div>
+        <div class="footer-pages__right">
+          <h3 class="footer-pages__title">приєднуйтесь</h3>
+          <ul class="footer-social__list">
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
