--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,22 @@
           </ul>
         </nav>
         <div class="contact-list">
-          <a class="contact-list-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-          <a class="contact-list-link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
+          <div class="contact-email">
+            <svg class="contacts-email__icon" width="16px" height="12px">
+              <use href="./images/symbol-defs.svg#icon-envelope"></use>
+            </svg>
+            <a class="contact-list-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </div>
+          <div class="contact-tel">
+            <svg class="contacts-tel__icon" width="10" height="16">
+              <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+            </svg>
+            <a class="contact-list-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </div>
         </div>
       </div>
     </header>
@@ -50,105 +60,152 @@
         <button class="main-btn" type="button">Усі</button>
         <button class="main-btn" type="button">Веб-сайти</button>
         <button class="main-btn" type="button">Додатки</button>
-        <button class="main-btn" type="button">Дизайн</button>
-        <button class="main-btn" type="button">Маркетинг</button>
+        <button class="main-btn" type="button">Дизайн</button
+        ><button class="main-btn" type="button">Маркетинг</button>
       </div>
       <div class="container">
-      <ul class="main-list">
-        <li class="main-list-item">
-          <article class="info">
-            <img
-              class="info-img"
-              src="./images/portfolio/Технокряк.jpg"
-              alt="Технокряк"
-            />
-            <h4 class="info-title">Технокряк</h4>
-            <p class="info-text">Веб-сайт</p>
-          </article>
-        </li>
-        <li class="main-list-item">
-          <article class="info">
-            <img
-              class="info-img"
-              src="./images/portfolio/NewOrlea.jpg"
-              alt="NewOrlean"
-            />
-            <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
-            <p class="info-text">Дизайн</p>
-          </article>
-        </li>
-        <li>
-          <article class="info">
-            <img class="info-img" src="./images/portfolio/Seafood.jpg" alt="Seafood" />
-            <h4 class="info-title">Ресторан Seafood</h4>
-            <p class="info-text">Додаток</p>
-          </article>
-        </li>
-        <li class="main-list-item">
-          <article class="info">
-            <img class="info-img" src="./images/portfolio/Prime.jpg" alt="Prime" />
-            <h4 class="info-title">Проєкт Prime</h4>
-            <p class="info-text">Маркетинг</p>
-          </article>
-        </li>
-        <li>
-          <article class="info">
-            <img class="info-img" src="./images/portfolio/Boxes.jpg" alt="Boxes" />
-            <h4 class="info-title">Проєкт Boxes</h4>
-            <p class="info-text">Додаток</p>
-          </article>
-        </li>
-        <li class="main-list-item">
-          <article class="info">
-            <img
-              class="info-img"
-              src="./images/portfolio/Inspiration.jpg"
-              alt="Inspiration"
-            />
-            <h4 class="info-title">Inspiration has no Borders</h4>
-            <p class="info-text">Веб-сайт</p>
-          </article>
-        </li>
-        <li>
-          <article class="info">
-            <img
-              class="info-img"
-              src="./images/portfolio/Limited.jpg"
-              alt="Limited"
-            />
-            <h4 class="info-title">Видання Limited Edition</h4>
-            <p class="info-text">Дизайн</p>
-          </article>
-        </li>
-        <li class="main-list-item">
-          <article class="info">
-            <img class="info-img" src="./images/portfolio/Lab.jpg" alt="Lab" />
-            <h4 class="info-title">Проєкт LAB</h4>
-            <p class="info-text">Маркетинг</p>
-          </article>
-        </li>
-        <li class="main-list-item">
-          <article class="info">
-            <img class="info-img" src="./images/portfolio/Growing.jpg" alt="Growing" />
-            <h4 class="info-title">Growing Business</h4>
-            <p class="info-text">Додаток</p>
-          </article>
-        </li>
-      </ul>
-    </div>
+        <ul class="main-list">
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Технокряк.jpg"
+                alt="Технокряк"
+              />
+              <h4 class="info-title">Технокряк</h4>
+              <p class="info-text">Веб-сайт</p>
+            </article>
+          </li>
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/NewOrlea.jpg"
+                alt="NewOrlean"
+              />
+              <h4 class="info-title">Постер New Orlean vs Golden Star</h4>
+              <p class="info-text">Дизайн</p>
+            </article>
+          </li>
+          <li>
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Seafood.jpg"
+                alt="Seafood"
+              />
+              <h4 class="info-title">Ресторан Seafood</h4>
+              <p class="info-text">Додаток</p>
+            </article>
+          </li>
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Prime.jpg"
+                alt="Prime"
+              />
+              <h4 class="info-title">Проєкт Prime</h4>
+              <p class="info-text">Маркетинг</p>
+            </article>
+          </li>
+          <li>
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Boxes.jpg"
+                alt="Boxes"
+              />
+              <h4 class="info-title">Проєкт Boxes</h4>
+              <p class="info-text">Додаток</p>
+            </article>
+          </li>
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Inspiration.jpg"
+                alt="Inspiration"
+              />
+              <h4 class="info-title">Inspiration has no Borders</h4>
+              <p class="info-text">Веб-сайт</p>
+            </article>
+          </li>
+          <li>
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Limited.jpg"
+                alt="Limited"
+              />
+              <h4 class="info-title">Видання Limited Edition</h4>
+              <p class="info-text">Дизайн</p>
+            </article>
+          </li>
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Lab.jpg"
+                alt="Lab"
+              />
+              <h4 class="info-title">Проєкт LAB</h4>
+              <p class="info-text">Маркетинг</p>
+            </article>
+          </li>
+          <li class="main-list-item">
+            <article class="info">
+              <img
+                class="info-img"
+                src="./images/portfolio/Growing.jpg"
+                alt="Growing"
+              />
+              <h4 class="info-title">Growing Business</h4>
+              <p class="info-text">Додаток</p>
+            </article>
+          </li>
+        </ul>
+      </div>
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
+        <div class="footer-pages__left">
+        <a class="footer-logo" href="#"
           >Web<span class="footer-span">Studio</span></a
         >
         <address class="address">
           <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-          <a class="footer-mail" href="mailto:info@example.com"
-            >info@example.com</a
+          <a class="footer-mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
           >
           <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+      </div>
+        <div class="footer-pages__right">
+          <h3 class="footer-pages__title">приєднуйтесь</h3>
+          <ul class="footer-social__list">
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li class="footer-social__item">
+              <svg class="footer__icon">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
