--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                 alt="coding"
                 width="370"
               />
+              <div class="work__text">
+                <p>Десктопні додатки</p>
+              </div>
             </li>
             <li class="work-list-item">
               <img
@@ -117,6 +120,9 @@
                 alt="working"
                 width="370"
               />
+              <div class="work__text">
+                <p>Мобільні додатки</p>
+              </div>
             </li>
             <li class="work-list-item">
               <img
@@ -125,6 +131,9 @@
                 alt="designing"
                 width="370"
               />
+              <div class="work__text">
+                <p>Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
